[package]
name = "solana-mev-example"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.16.0"
solana-sdk = "1.16.0"
solana-program = "1.16.0"
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.3.0", features = ["derive"] } 